# UnderstandableBinary

./: .gitignore  .gitmodules  README.md  pyproject.toml  run.sh
docs/: diff.html
get-data/: Dockerfile  README.md  install-packages.sh  run.sh  source-packages.sh
get-data/apt/: README.md  deb-sources.list  run.sh  source-packages.sh
get-data/conan/: README.md  packages.txt  run.sh
get-data/decompile/: BatchDecompile.java  README.md  run.sh
get-data/disassemble/: BatchDecompile.java  README.md  run.sh
get-data/preprocessor/: Cargo.toml
get-data/preprocessor/src/: io_write_to_fmt_write.rs  main.rs
get-data/scraper/: Cargo.toml
get-data/scraper/src/: main.rs
get-data/vcpkg/: README.md  run.sh
ghidra/: .gitignore  BatchDecompile.java  README.md  disassemble.sh
preprocessor/src/: c_ast.rs  main.rs
python/: README.md  cmdline.py  code_type.py  code_type_c.py  code_types.py  compile.py  data.py  dataset.py  download.py  generate.py  inspect_.py  log.py  model.py  pyproject.toml  train.py  transform.py  transform_gen.py  transform_ir.py  tree_sitter_langs.py  utils.py
vcpkg-data/: .gitignore  download.sh
