[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["jakobeha <jakobeha@fastmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
transformers = "^4.24.0"
evaluate = "^0.3.0"
torch = [
    {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-linux_x86_64.whl", markers = "sys_platform == 'linux'"},
    # {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'"},
    {url = "https://download.pytorch.org/whl/cu116/torch-1.13.0%2Bcu116-cp310-cp310-win_amd64.whl", markers = "sys_platform == 'win32'"},
    # {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin'"},
    {url = "https://download.pytorch.org/whl/cpu/torch-1.13.0-cp310-none-macosx_11_0_arm64.whl", markers = "sys_platform == 'darwin'"},
]
numpy = "^1.23.4"
torch-utils = "^0.1.2"
sklearn = "^0.0.post1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"