[package]
name = "preprocessor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
rayon = "1.5.3"
clang-ast = "0.1.9"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
regex = "1.7.0"
lazy_static = "1.4.0"